# pytracker

./: CMakeLists.txt  library.h  pyctracker.cpp  pytracker.cpp  tracker_wrapper.cpp  tracker_wrapper.h
tracker/: CMakeLists.txt  core.hpp  descriptor.hpp  distance.cpp  distance.hpp  kuhn_munkres.cpp  kuhn_munkres.hpp  logging.hpp  tracker.cpp  tracker.hpp  utils.cpp  utils.hpp
